--- a/AHWForm/AHWForm/App_LocalResources/AuctionDetails.aspx.resx
+++ b/AHWForm/AHWForm/App_LocalResources/AuctionDetails.aspx.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AuctionCreated.Text" xml:space="preserve">
+    <value>Auction created:</value>
+  </data>
+  <data name="AuctionEndedText" xml:space="preserve">
+    <value>Auction is ended</value>
+  </data>
+  <data name="AuctionEndsAt.Text" xml:space="preserve">
+    <value>Auction ends at:</value>
+  </data>
   <data name="AuctionLongDescriptionResource1.Text" xml:space="preserve">
     <value />
   </data>
@@ -147,13 +156,22 @@
   <data name="CreatorNameResource1.ToolTip" xml:space="preserve">
     <value />
   </data>
+  <data name="Currency.Text" xml:space="preserve">
+    <value>USD</value>
+  </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>- My ASP.NET Application</value>
+  </data>
+  <data name="PriceLabel.Text" xml:space="preserve">
+    <value>Price:</value>
   </data>
   <data name="PriceResource1.Text" xml:space="preserve">
     <value />
   </data>
   <data name="PriceResource1.ToolTip" xml:space="preserve">
     <value />
+  </data>
+  <data name="UserNameLabel.Text" xml:space="preserve">
+    <value>User name: </value>
   </data>
 </root>
